# gryphon-stats

./: CMakeLists.txt  README.md
include/: Chi2.h  Data.h  Logging.h  Model.h  Particle.h  ProgressBar.h  Utilities.h  gsl.h
include/models/: PositronPWNe.h  Positrons.h  PrimaryElectrons.h  PrimaryProtons.h  Secondary.h  SingleGalaxy.h
projs/: fit_dampe.cpp  nuclei_fluctuations.cpp
src/: Chi2.cpp  Data.cpp  Particle.cpp  ProgressBar.cpp  Utilities.cpp  gsl.cpp  main.cpp
src/models/: Positrons.cpp  PrimaryElectrons.cpp  PrimaryProtons.cpp  Secondary.cpp  SingleGalaxy.cpp
